--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body {
 	background: black;
 }
+
+#main {
+	width: 50%;
+	height: 50%;
+	opacity: 0.5;
+	background-color: white;
+	border-radius: 30px;
+}
