--- a/style.css
+++ b/style.css
@@ -1,23 +1,21 @@
 body {
 	background: black;
+	    font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-
 
 .wrapper {
 	display: table;
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../resources/bg.jpg') no-repeat center center scroll;
+	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('./resources/bg.jpg') no-repeat center center scroll;
 	background-size: cover;
 }
 
 .main {
-	width: 50%;
-	height: 50%;
-	opacity: 0.5;
-	background-color: white;
-	border-radius: 30px;
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
 }
 
 .main h1 {
