--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@ body {
 
 .wrapper {
 	display: table;
+	opacity: 0;
+	-webkit-transition: opacity 1.5s;
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('./resources/bg.jpg') no-repeat center center scroll;
+	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('./resources/bg.png') no-repeat center center scroll;
 	background-size: cover;
 }
 
@@ -35,7 +37,7 @@ body {
 .headerButton {
     cursor: pointer;
     text-align: center;
-    line-height: 1.3333333;
+    line-height: 150px;
     margin: 0px 5px;
     font-weight: 300;
     background: #00000017;
@@ -49,4 +51,30 @@ body {
 	padding: 10px 16px;
 	font-size: 18px;
     width: 400px;
+}
+
+.contactIcons {
+    box-sizing: border-box;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 40px;
+    padding-top: 45px;
+}
+
+.contactIcons a {
+	font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: none;
+    color: #000000c4;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    padding: 10px;
+    -webkit-transition: .7s color, 0.5s font-size;
+}
+
+.contactIcons a:hover {
+	color: red;
+	font-size: 60px;
 }
