--- a/style.css
+++ b/style.css
@@ -78,3 +78,38 @@ body {
 	color: red;
 	font-size: 60px;
 }
+
+.tooltip {
+	width: 80px;
+    height: 25px;
+    background: #3a3a3a;
+    border-radius: .4em;
+    position: absolute;
+    left: 1160px;
+    top: 676px;
+    text-align: center;
+    color: white;
+    line-height: 27px;
+    color: white;
+    opacity: 0;
+    -webkit-transition: .5s opacity;
+}
+
+/*, .5s left, .5s top;*/
+
+.tooltip:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 54%;
+    width: 0;
+    border: 11px solid transparent;
+    border-top-color: #3b3b3b;
+    border-bottom: 0;
+    margin-left: -14px;
+    margin-bottom: -11px;
+}
+
+.ttbutton > i {
+	font-style: normal;
+}
