--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('http://fonts.googleapis.com/css?family=Raleway:100,200,300,400');
+
 body {
 	background: black;
 	    font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
