--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url('http://fonts.googleapis.com/css?family=Raleway:100,200,300,400');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200&display=swap');
 
 body {
 	background: black;
-	    font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	    font-family: 'Raleway', sans-serif;
 }
 
 .wrapper {
