--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 	background: black;
 	    font-family: 'Raleway', sans-serif;
         background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('./resources/bg.png') no-repeat center center scroll;
-        width: 100%;
-        height: 100%;
+        width: auto;
+        height: auto;
 }
 
 .wrapper {
