--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ body {
 	font-family: 'Raleway', sans-serif;
     background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('./resources/bg.png') no-repeat center center;
     background-size: 100% 100%;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
+    position: relative;
 }
 
 .wrapper {
