--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 
 body {
 	font-family: 'Raleway', sans-serif;
-    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('./resources/bg.png') no-repeat center center;
-    background-size: 100% 100%;
-    width: 100%;
-    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('./resources/bg.jpg') no-repeat center center fixed;
+    background-size: cover;  
+    min-height: 100%;
+    min-width: 1024px;
     overflow: hidden;
     position: relative;
 }
@@ -73,7 +73,7 @@ body {
     font-style: normal;
     font-weight: normal;
     text-decoration: none;
-    color: #000000c4;
+    color: black;
     line-height: 1;
     -webkit-font-smoothing: antialiased;
     padding: 10px;
