--- a/style.css
+++ b/style.css
@@ -4,29 +4,28 @@ body {
 	font-family: 'Raleway', sans-serif;
     background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('./resources/bg.jpg') no-repeat center center fixed;
     background-size: cover;  
-    min-height: 100%;
-    min-width: 1024px;
+    min-width: 100%;
     overflow: hidden;
     position: relative;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    min-height: 405px;
+    overflow-x: hidden;
 }
 
 .wrapper {
-	display: table;
-	opacity: 0;
-	-webkit-transition: opacity .75s;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	background-size: cover;
+    opacity: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+    width: 100%;
 }
 
-.main {
-	display: table-cell;
-	text-align: center;
-	vertical-align: middle;
-}
-
-.main h1 {
+.wrapper h1 {
 	margin: 0;
 	font-size: 0;
 	color: black;
@@ -35,7 +34,7 @@ body {
 	text-transform: uppercase;
 }
 
-.main p {
+.wrapper p {
 	color: #000;
     font-weight: bold;
     margin: 19px;
